feat: UI sophistication pass with enterprise color tokens