@@ -1,20 +1,20 @@
 package com.compliantpay.controller;
 
-import com.compliantpay.model.User;
-// import com.compliantpay.repository.UserRepository; // Keep commented unless needed directly here
+import java.util.Map;
+import java.util.stream.Collectors;
+
 import org.springframework.http.ResponseEntity;
 import org.springframework.security.access.prepost.PreAuthorize;
-import org.springframework.security.core.Authentication;
-import org.springframework.security.core.GrantedAuthority; // Moved import
+import org.springframework.security.core.Authentication; // Moved import
+import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RestController;
+import org.springframework.web.bind.annotation.RestController; // Moved import
 
-import java.util.Map; // Moved import
-import java.util.stream.Collectors; // Moved import
+import com.compliantpay.model.User; // Moved import
 
 @CrossOrigin(origins = "*", maxAge = 3600)
 @RestController
@@ -38,23 +38,24 @@ public class UserController {
         Object principal = authentication.getPrincipal();
 
         // Check if the principal is our custom User object
-        if (principal instanceof User) {
-            User currentUser = (User) principal;
+    if (principal != null && principal instanceof User user) {
             // Return a Map or a dedicated UserProfileDTO (never include password)
-            return ResponseEntity.ok(Map.of(
-                    "id", currentUser.getId(),
-                    "username", currentUser.getUsername(),
-                    "email", currentUser.getEmail(),
-                    "roles", currentUser.getAuthorities().stream()
-                            .map(GrantedAuthority::getAuthority)
-                            .collect(Collectors.toList()),
-                    "enabled", currentUser.isEnabled()
-                    // Add other safe fields if needed
-            ));
+            Map<String, Object> userMap = new java.util.HashMap<>();
+            userMap.put("id", user.getId());
+            userMap.put("username", user.getUsername());
+            userMap.put("email", user.getEmail());
+            userMap.put("roles", user.getAuthorities().stream().map(a -> a.getAuthority()).toList());
+            userMap.put("enabled", user.isEnabled());
+            userMap.put("subscriptionTier", user.getSubscriptionTier());
+            userMap.put("enabledFeatures", user.getEnabledFeatures());
+            userMap.put("usageCount", user.getUsageCount());
+            userMap.put("whiteLabelConfig", user.getWhiteLabelConfig());
+            userMap.put("stripeCustomerId", user.getStripeCustomerId());
+            userMap.put("stripeSubscriptionId", user.getStripeSubscriptionId());
+            return ResponseEntity.ok(userMap);
         }
         // Fallback if principal is a standard UserDetails (less likely with our setup but good practice)
-        else if (principal instanceof UserDetails) {
-            UserDetails userDetails = (UserDetails) principal;
+    else if (principal instanceof UserDetails userDetails) {
             return ResponseEntity.ok(Map.of(
                     "username", userDetails.getUsername(),
                     "roles", userDetails.getAuthorities().stream()
@@ -65,7 +66,7 @@ public class UserController {
         }
         // Handle unexpected principal type
         else {
-            System.err.println("Unexpected principal type: " + principal.getClass().getName()); // Log unexpected type
+            System.err.println("Unexpected principal type: " + (principal != null ? principal.getClass().getName() : "null")); // Log unexpected type
             return ResponseEntity.status(500).body(Map.of("error", "Could not determine user details from principal"));
         }
     }
